# discrete-events-simulation-engine

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
app/: CMakeLists.txt
lib/: BaseObject.h  CMakeLists.txt  GenericGraph.h  ModuleTimer.cpp  ModuleTimer.h  MovingParticle.cpp  MovingParticle.h  RandomVariable.cpp  RandomVariable.h  SimulationEvent.h  SimulationModule.h  SimulationTime.cpp  UniqueIDGenerator.cpp  UniqueIDGenerator.h  common.h
src/: TestDESimulator.cpp  TestDESimulator.h  baseobject.cpp  baseobject.h  common.h  desimulator.cpp  desimulator.h  genericgraph.cpp  genericgraph.h  main.cpp  moduletimer.cpp  moduletimer.h  movingparticle.cpp  movingparticle.h  random.cpp  random.h  randomvariable.cpp  randomvariable.h  simulationevent.cpp  simulationevent.h  simulationmodule.cpp  simulationmodule.h  simulationtime.cpp  simulationtime.h  test_desimulator.cpp  test_desimulator.h  uniqueidgenerator.cpp  uniqueidgenerator.h
test/: CMakeLists.txt  TestBaseObject.cpp  TestDESimulator.cpp  TestDESimulator.h  TestGenericGraph.cpp  TestRandom.cpp  TestRandomVariable.cpp  TestSimulationTime.cpp  TestUniqueIDGenerator.cpp  main.cpp
